# aliment

backend/: pyproject.toml
backend/aliment/: main.py
backend/aliment/nutrition/: log.py  plan.py
backend/aliment/schema/: schema.py
